<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_marginTop="-30dp"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/ll_drawer_poster"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_menu"
    >

        <ImageView android:layout_width="@dimen/_100sdp"
                   android:layout_height="@dimen/_100sdp"
                   android:src="@mipmap/ic_launcher"
                   android:id="@+id/iv_drawer_logo"
                   android:layout_marginTop="@dimen/_55sdp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_1"
                android:textColor="@color/colorBackgroundLight"
                android:fontFamily="@font/blacklisted"
                android:layout_marginTop="@dimen/_20sdp"
                android:id="@+id/tv_drawer_app_name"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Musics is an outburst of the soul"
                android:textSize="@dimen/text_size_3"
                android:textColor="@color/colorBackgroundLight"
                android:fontFamily="@font/utm_swiss_condensed_0"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_below="@+id/ll_drawer_poster"
            android:id="@+id/ll_items"
    >


        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cv_sleep_timer"


                app:cardElevation="@dimen/_0sdp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="@dimen/_25sdp"
                app:cardBackgroundColor="#00ffffff"
                android:layout_gravity="end|bottom"

                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
        >



                <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/ic_sleep_time"
                        android:layout_margin="@dimen/_10sdp"
                />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sleep timer"
                    android:textColor="@color/textColorDark"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textStyle="bold"
                    android:id="@+id/tv_sleep_timer"
            />
        </android.support.v7.widget.CardView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/ll_dark_mode"

                android:layout_margin="@dimen/_10sdp"
        >

            <!--android:layout_marginRight="@dimen/_20sdp"-->
            <!--android:layout_marginLeft="@dimen/_20sdp"-->


            <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_dark_mode"
                    android:layout_margin="@dimen/_10sdp"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Dark mode"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:textColor="@color/textColorDark"
                    android:textStyle="bold"
                    android:id="@+id/tv_dark_mode"
            />
            <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tb_dark_mode"
                    android:layout_margin="@dimen/_5sdp"
                    android:theme="@style/SCBSwitch"
            />

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"

            android:orientation="vertical"
            android:layout_margin="@dimen/_20sdp"

            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_info"
                android:textStyle="bold"
            />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev1"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev2"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev3"
                />
    </LinearLayout>
    </LinearLayout>
    <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/_400sdp"-->
            <!--android:background="@drawable/bg_menu_normal_2"-->
            <!--android:id="@+id/iv_footer"-->
            <!--android:layout_alignParentBottom="true"-->
    <!--/>-->
</RelativeLayout>
